Renewed certificates and removed reference to old ones

--- a/notebooks/Messages.ipynb
+++ b/notebooks/Messages.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRIVATE_KEY = \"../certificates/root/keys/www.brainblocks.com.key\""
+    "PRIVATE_KEY = \"../certificates/root/keys/test.key\""
    ]
   },
   {
@@ -242,6 +242,15 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
