--- a/notebooks/RSAFUN.ipynb
+++ b/notebooks/RSAFUN.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/Users/avigano/Developer/nanoray/certificates/root/certs/www.brainblocks.com.crt', 'rb') as myfile:\n",
+    "with open('/Users/avigano/Developer/nanoray/certificates/root/certs/test.crt', 'rb') as myfile:\n",
     "  pem = myfile.read()"
    ]
   },
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/Users/avigano/Developer/nanoray/certificates/root/keys/www.brainblocks.com.key', 'rb') as myfile:\n",
+    "with open('/Users/avigano/Developer/nanoray/certificates/root/keys/test.key', 'rb') as myfile:\n",
     "  key_data = myfile.read()"
    ]
   },
@@ -292,6 +292,15 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
